--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,10 @@ dependencies = [
     "mapclassify>=2.10.0",
     "matplotlib>=3.10.8",
     "numpy>=2.4.0",
+    "pygris>=0.2.1",
     "pygtfshandler[osm,plot]",
     "urbanaccessanalyzer[h3,osm,plot]",
+    "us>=3.2.0",
 ]
 
 [tool.uv.sources]
